# russ-swiss-tournament

./: .gitignore  config.py  main.py  nvim_tmuxp.yml  nvim_zellij.kdl  pyproject.toml  tailwind.config.js
htmx/: db.py  models.py  router.py
russ_swiss_tournament/: cli.py  db.py  matchup.py  matchup_assignment.py  player.py  round.py  service.py  tie_break.py  tournament.py
static/css/: main.css
styles/: main.css
templates/: base.html  content.html  index.html  player_rounds_modal.html  round_form.html  round_status.html  standings.html  tab_all.html  tab_round.html
tests/: test_backend.py
tournaments/dummy/: config.toml
tournaments/dummy/testing_rounds_round_robin/: round10.csv  round12.csv  round13.csv  round4.csv  round5.csv  round7.csv
tournaments/test_round_robin/: config.toml
tournaments/test_round_robin/testing_rounds_round_robin/: round1.csv  round11.csv  round2.csv  round3.csv  round6.csv  round8.csv  round9.csv
tournaments/test_swiss/: config.toml
tournaments/test_tie_break/: config.toml
tournaments/test_tie_break/rounds/: round1.csv  round2.csv  round3.csv
