[tool.poetry]
name = "russ-swiss-tournament"
version = "0.1.0"
description = ""
authors = ["Joakim Weckman <joakim.weckman@gmail.com>"]
readme = "README.md"
packages = [{include = "russ_swiss_tournament"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
tomli = "^2.0.1"
fastapi = "^0.104.1"
sqlmodel = "^0.0.14"
uvicorn = "^0.24.0.post1"
jinja2 = "^3.1.2"
pytailwindcss = "^0.2.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
